Fix extra gap in hero title between Back to School and Bash
display: block on the gold span was doubling the line break from the <br> tag.

--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -47,7 +47,6 @@
 
     &--gold {
       color: var(--color-gold);
-      display: block;
     }
   }
 
